# supermux

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.ar.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.km.md  README.ko.md  README.md  README.no.md  README.pl.md  README.pt-BR.md  README.ru.md  README.th.md  README.tr.md  README.uk.md  README.vi.md  README.zh-CN.md  README.zh-TW.md  SUPERMUX-TOUCHPOINTS.md  SUPERMUX.md  supermux.release.entitlements
.github/: swift-file-length-budget.tsv  test-determinism-allowlist.txt
.greptile/: config.json  files.json  rules.md
AppIcon-Debug.icon/: icon.json
CLI/: CMUXCLI+AgentHookCatalog.swift  CMUXCLI+AgentHookDefinitions.swift  CMUXCLI+CommandSuggestions.swift  CMUXCLI+ExecutableResolution.swift  CMUXCLI+SSHStartupScripts.swift  CMUXCLI+SessionsList.swift  CMUXCLI+ThemeSupport.swift  CMUXCLI+WorkspaceTodo.swift  SSHPTYAttachExitCode.swift  cmux.swift  cmux_open.swift
Resources/: Info.plist
Sources/: AgentChatThemeSync.swift  AgentDeliveryTargetResolution.swift  AgentForkSupport.swift  AppDelegate+AgentChat.swift  AppDelegate.swift  (+178 more)
cmux-tui/crates/cmux-tui/: Cargo.toml
cmux-tui/crates/cmux-tui/src/: app.rs  browser_input.rs  cli.rs  config.rs  main.rs
cmux-tui/crates/cmux-tui/src/session/: mod.rs  remote.rs  tree.rs
cmux-tui/crates/cmux-tui/src/sidebar_files/: mod.rs
cmux-tui/crates/cmux-tui/src/ui/: graphics.rs  mod.rs  omnibar.rs  overlay.rs  pane.rs  sidebar.rs  terminal_grid.rs
cmux-tui/crates/cmux-tui/tests/: cli.rs
(+505 files in other folders)
